@@ -10,6 +10,7 @@ aTunes 3.2.0
 - UI improvement: use JProgressBar instead of JSlider to show and seek current audio object progress
 - Show first element file or folder to help user select a pattern when editing tag
 - Search redesigned
+- Disabled repository refresh by default
 
 aTunes 3.1.1
 ------------
